@startuml CPS Action - ER Diagram
' ERD: core entities and relationships
hide methods
hide stereotypes

' Entities
entity "CPSAction" as cps_action {
  *id: string
  --
  action_code: string
  unique_id: string
  maker_id: string
  maker_name: string
  maker_phone: string
  checker_id: string
  checker_name: string
  checker_phone: string
  department: string
  rejection_reason: string
  action_status: {PENDING|APPROVED|REJECTED}
  action_type: {CREATE|UPDATE|DELETE}
  request_action: string
  maker_action_time: datetime
  checker_action_time: datetime
  created_at: datetime
  last_modified_at: datetime
}

entity "CPSUser" as cps_user {
  *user_code: string
  --
  full_name: string
  phone_number: string
  department: string
  role: string
  email: string
  enabled: bool
}

entity "BPSUser" as bps_user {
  *user_code: string
  --
  full_name: string
  username: string
  phone_number: string
  branch_code: [string]
  branch_name: string
  home_branch: string
  role: string
  realm: string
  enabled: bool
}

entity "OTP" as otp {
  *id: string
  --
  phone_number: string
  account_number: string
  user_code: string
  otp_code: string
  otp_for: string
  status: string
  expires_at: datetime
}

entity "Bank" as bank {
  *id: string
  --
  name: string
  code: string
  bic: string
  enabled: bool
}

entity "Branch" as branch {
  *id: string
  --
  code: string
  name: string
  address: string
  owner: string
  account_number: string
}

entity "HQ" as hq {
  *id: string
  --
  unique_id: string
  name: string
  address: string
  phone_number: string
  email: string
}

entity "LinkedAccount" as linked_account {
  *account_number: string
  --
  account_type: string
}

entity "Permission" as permission {
  *permission_name: string
}

entity "PermissionGroup" as permission_group {
  *id: string
  --
  group_name: string
  role: string
  enabled: bool
}

entity "PermissionCategory" as permission_category {
  *id: string
  --
  category_name: string
  access: string
  enabled: bool
}

entity "Card (PortalCard)" as card {
  *id: string
  --
  card_name: string
}

entity "Service" as service {
  *id: string
  --
  service_code: string
  service_name: string
  service_type: string
  enabled: bool
}

entity "ProductCode" as product_code {
  *id: string
  --
  branch_type: string
  product_code: string
  vat_code: string
  service_fee_code: string
}

entity "MiniApp" as mini_app {
  *id: string
  --
  app_name: string
  app_type: string
  merchant_id: string
  enabled: bool
}

entity "CredentialInformation" as credential_info {
  *id: string
  --
  environment: string
  merchant_app_id: string
  fabric_app_id: string
  short_code: string
  mini_app_code: string
}

entity "Wallet" as wallet {
  *id: string
  --
  name: string
  code: string
  enabled: bool
}

entity "BudgetCategory" as budget_category {
  *id: string
  --
  name: string
  icon: string
  description: string
}

entity "AmountBasedAuth" as amount_based_auth {
  *id: string
  --
  min_amount: uint64
  max_amount: uint64
  method: string
  enabled: bool
}

entity "Tier" as tier {
  *id: string
  --
  min: uint64
  max: uint64
  fee_amount: uint64
}

entity "Cap" as cap {
  *kyc_level: string
  --
  single_cap: uint64
  daily_cap: uint64
  min_amount: uint64
}

entity "GLEntry" as gl_entry {
  *product_account: string
  --
  product_branch_code: string
  service_account: string
  service_branch_code: string
  vat_account: string
  vat_branch_code: string
}

entity "Event" as event {
  *id: string
  --
  event_code: string
  event_name: string
  city: string
  account_number: string
  status: string
}

entity "Ticket" as ticket {
  *name: string
  --
  category: string
  type: string
  price: uint64
}

entity "MerchantInformation" as merchant_info {
  *merchant_id: string
  --
  merchant_name: string
  merchant_phone_number: string
  merchant_email: string
}

entity "Notification" as notification {
  *id: string
  --
  title: string
  notification_type: string
  body: string
  status: string
}

entity "Avatar" as avatar {
  *id: string
  --
  avatar: string
  label: string
  enabled: bool
}

entity "Advert" as advert {
  *id: string
  --
  title: string
  description: string
  banner_image: string
  advert_for: string
}

entity "Department" as department {
  *id: string
  --
  name: string
  code: string
}

' Maker/Checker relationships to CPSUser
cps_user ||--o{ cps_action : maker_id -> user_code
cps_user ||--o{ cps_action : checker_id -> user_code

' Polymorphic CurrentAction/PreviousAction to common domain entities
' Each CPSAction optionally targets exactly one entity as current/previous; an entity may be referenced by many actions
bank ||--o{ cps_action : referenced_as_current
bank ||--o{ cps_action : referenced_as_previous
branch ||--o{ cps_action : referenced_as_current
branch ||--o{ cps_action : referenced_as_previous
hq ||--o{ cps_action : referenced_as_current
hq ||--o{ cps_action : referenced_as_previous
linked_account ||--o{ cps_action : referenced_as_current
linked_account ||--o{ cps_action : referenced_as_previous
permission ||--o{ cps_action : referenced_as_current
permission ||--o{ cps_action : referenced_as_previous
permission_group ||--o{ cps_action : referenced_as_current
permission_group ||--o{ cps_action : referenced_as_previous
permission_category ||--o{ cps_action : referenced_as_current
permission_category ||--o{ cps_action : referenced_as_previous
card ||--o{ cps_action : referenced_as_current
card ||--o{ cps_action : referenced_as_previous
service ||--o{ cps_action : referenced_as_current
service ||--o{ cps_action : referenced_as_previous
product_code ||--o{ cps_action : referenced_as_current
product_code ||--o{ cps_action : referenced_as_previous
mini_app ||--o{ cps_action : referenced_as_current
mini_app ||--o{ cps_action : referenced_as_previous
credential_info ||--o{ cps_action : referenced_as_current
credential_info ||--o{ cps_action : referenced_as_previous
wallet ||--o{ cps_action : referenced_as_current
wallet ||--o{ cps_action : referenced_as_previous
budget_category ||--o{ cps_action : referenced_as_current
budget_category ||--o{ cps_action : referenced_as_previous
amount_based_auth ||--o{ cps_action : referenced_as_current
amount_based_auth ||--o{ cps_action : referenced_as_previous
tier ||--o{ cps_action : referenced_as_current
tier ||--o{ cps_action : referenced_as_previous
cap ||--o{ cps_action : referenced_as_current
cap ||--o{ cps_action : referenced_as_previous
gl_entry ||--o{ cps_action : referenced_as_current
gl_entry ||--o{ cps_action : referenced_as_previous
event ||--o{ cps_action : referenced_as_current
event ||--o{ cps_action : referenced_as_previous
ticket ||--o{ cps_action : referenced_as_current
ticket ||--o{ cps_action : referenced_as_previous
merchant_info ||--o{ cps_action : referenced_as_current
merchant_info ||--o{ cps_action : referenced_as_previous
notification ||--o{ cps_action : referenced_as_current
notification ||--o{ cps_action : referenced_as_previous
avatar ||--o{ cps_action : referenced_as_current
avatar ||--o{ cps_action : referenced_as_previous
advert ||--o{ cps_action : referenced_as_current
advert ||--o{ cps_action : referenced_as_previous

bps_user ||--o{ cps_action : referenced_as_current
bps_user ||--o{ cps_action : referenced_as_previous
otp ||--o{ cps_action : referenced_as_current
otp ||--o{ cps_action : referenced_as_previous

' Additional ER relationships based on foreign ids / references
' Users and Departments
department ||--o{ cps_user : id -> department
permission_category ||--o{ cps_user : id in permission_category[]
permission_group ||--o{ cps_user : id in permission_group[]

' Bank and Branch
bank ||--o{ branch : id <- owner

' HQ and Linked Accounts
hq ||--o{ linked_account : has

' Service aggregates
service ||--|| cap : has
service ||--|| gl_entry : has
service ||--o{ tier : has many
service ||--o{ product_code : has codes

' MiniApp aggregates
mini_app ||--|| credential_info : has
mini_app ||--o{ product_code : uses codes

' Event aggregates
event ||--o{ ticket : has many
merchant_info ||--o{ event : used by

' Notifications created by CPSUser
cps_user ||--o{ notification : created_by -> user_code

' OTP references
cps_user ||--o{ otp : user_code
linked_account ||--o{ otp : account_number

' BPSUser branches
branch ||--o{ bps_user : code in branch_code[]
bps_user }o--|| branch : home_branch -> id

' CPSAction department code references Department.code
department ||--o{ cps_action : code <- department

' Permission relationships
permission_category ||--o{ permission_group : id -> permission_category
permission_group }o--o{ permission : many-to-many

' Portal Card hierarchy
card ||--o{ card : sub_cards

@enduml

@startuml CPS Action - Class Diagram Associations
skinparam classAttributeIconSize 0
hide methods

class CPSAction {
  id: string
  actionCode: string
  makerId: string
  checkerId: string
  department: string
  actionStatus: ActionStatus
  actionType: ActionType
  requestAction: string
  makerActionTime: time.Time
  checkerActionTime: time.Time
}

class CPSUser {
  userCode: string
  fullName: string
  phoneNumber: string
  department: string
}

interface ActionTarget

' Domain classes implement ActionTarget
class Bank implements ActionTarget
class Branch implements ActionTarget
class HQ implements ActionTarget
class LinkedAccount implements ActionTarget
class Permission implements ActionTarget
class PermissionGroup implements ActionTarget
class PermissionCategory implements ActionTarget
class Card implements ActionTarget
class Service implements ActionTarget
class ProductCode implements ActionTarget
class MiniApp implements ActionTarget
class CredentialInformation implements ActionTarget
class Wallet implements ActionTarget
class BudgetCategory implements ActionTarget
class AmountBasedAuth implements ActionTarget
class Tier implements ActionTarget
class Cap implements ActionTarget
class GLEntry implements ActionTarget
class Event implements ActionTarget
class Ticket implements ActionTarget
class MerchantInformation implements ActionTarget
class Notification implements ActionTarget
class Avatar implements ActionTarget
class Advert implements ActionTarget
class BPSUser implements ActionTarget
class OTP implements ActionTarget

' Maker/Checker
CPSAction "*" --> "1" CPSUser : maker
CPSAction "*" --> "0..1" CPSUser : checker

' Polymorphic current/previous associations
CPSAction "*" --> "0..1" ActionTarget : currentAction
CPSAction "*" --> "0..1" ActionTarget : previousAction

@enduml 